fixed videos behind text

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -103,6 +103,7 @@ a.link-video {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: -1;
   width: 100vw;
   height: 100vh;
 }
